<resources>
    <string name="app_name">Sanjiaodi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bottom_button_0_text">活动</string>
    <string name="bottom_button_1_text">收藏</string>
    <string name="bottom_button_2_text">常用</string>
    <string name="bottom_button_3_text">我的</string>
    <string name="third_title">常用信息</string>
    <string name="info_shopping_text">生活服务</string>
    <string name="info_house_text">住宿服务</string>
    <string name="info_education_text">教学楼</string>
    <string name="info_sports_text">运动设施</string>
    <string name="info_layout_0_text">校园生活</string>
    <string name="info_layout_1_text">校园交通</string>
    <string name="info_bus_text">公交车</string>
    <string name="info_station_text">公交站</string>
    <string name="info_taxi_text">出租车</string>
    <string name="info_metro_text">地铁信息</string>
    <string name="info_bank_text">银行信息</string>
    <string name="info_hospital_text">医疗信息</string>
    <string name="info_phone_text">服务信息</string>
    <string name="blank_text" />
    <string name="info_layout_2_text">校园服务</string>
    <string name="info_layout_3_text">校园地图</string>
    <string name="info_pku_text">北大校区</string>
    <string name="info_education_center_text">深圳大学城</string>
    <string name="info_metro_sz_text">深圳地铁</string>
    <string name="info_metro_hk_text">香港地铁</string>
    <string name="info_shopping_title">生活服务</string>
    <string name="info_shopping_tab_eat">餐饮</string>
    <string name="info_shopping_tab_shop">购物</string>
    <string name="info_shopping_tab_express">快递</string>
    <string name="info_shopping_tab_cash">取款</string>
    <string name="info_office_phone_text">服务应急电话</string>
    <string name="info_office_text">行政服务</string>
    <string name="info_office_title">信息服务</string>
    <string name="title_activity_info_sample">123</string>
    <string name="title_activity_phone">1234</string>
    <string name="title_activity_metro">MetroActivity</string>
    <string name="info_metro_title">地铁信息</string>
    <string name="info_metro_line_text">地铁线路</string>
    <string name="info_metro_station_text">大学城地铁站</string>
</resources>
