<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_group">

    </FrameLayout>
    <RadioGroup
        android:id="@+id/bottom_button_group"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_above="@+id/navigation_header_container"
        android:background="@android:color/white"  >
        <RadioButton
            android:id="@+id/bottom_button_0"
            android:checked="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bottom_button_0_text"
            android:textColor="@android:color/black"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/selector_bottom_button_0"
            />

        <RadioButton
            android:id="@+id/bottom_button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bottom_button_1_text"
            android:textColor="@android:color/black"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/selector_bottom_button_1"
            />

        <RadioButton
            android:id="@+id/bottom_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bottom_button_2_text"
            android:textColor="@android:color/black"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/selector_bottom_button_2"
            />

        <RadioButton
            android:id="@+id/bottom_button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/bottom_button_3_text"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:drawableTop="@drawable/selector_bottom_button_3"
            />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/navigation_header_container"
        android:orientation="vertical"
        android:background="@android:color/holo_red_light"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp">

    </LinearLayout>
</RelativeLayout>